src/plugins/platforms/cocoa/qcocoaglcontext.h
@@ -43,6 +43,7 @@
 #define QCOCOAGLCONTEXT_H
 
 #include <QtCore/QPointer>
+#ifndef QT_NO_OPENGL
 #include <qpa/qplatformopenglcontext.h>
 #include <QtGui/QOpenGLContext>
 #include <QtGui/QWindow>
@@ -88,5 +89,7 @@ private:
 };
 
 QT_END_NAMESPACE
+
+#endif // QT_NO_OPENGL
 
 #endif // QCOCOAGLCONTEXT_H
