src/plugins/platforms/cocoa/qcocoawindow.h
@@ -147,8 +147,10 @@ public:
     NSUInteger windowStyleMask(Qt::WindowFlags flags);
     void setWindowShadow(Qt::WindowFlags flags);
 
+#ifndef QT_NO_OPENGL
     void setCurrentContext(QCocoaGLContext *context);
     QCocoaGLContext *currentContext() const;
+#endif
 
     bool setWindowModified(bool modified) Q_DECL_OVERRIDE;
 
@@ -211,7 +213,9 @@ public: // for QNSView
     bool m_windowUnderMouse;
 
     bool m_inConstructor;
+#ifndef QT_NO_OPENGL
     QCocoaGLContext *m_glContext;
+#endif
     QCocoaMenuBar *m_menubar;
     NSCursor *m_windowCursor;
 
