src/plugins/platforms/cocoa/qcocoawindow.mm
@@ -215,7 +215,9 @@ QCocoaWindow::QCocoaWindow(QWindow *tlw)
     , m_windowModality(Qt::NonModal)
     , m_windowUnderMouse(false)
     , m_inConstructor(true)
+#ifndef QT_NO_OPENGL
     , m_glContext(0)
+#endif
     , m_menubar(0)
     , m_windowCursor(0)
     , m_hasModalSession(false)
@@ -531,8 +533,10 @@ void QCocoaWindow::setVisible(bool visible)
             [m_contentView setHidden:NO];
     } else {
         // qDebug() << "close" << this;
+#ifndef QT_NO_OPENGL
         if (m_glContext)
             m_glContext->windowWasHidden();
+#endif
         QCocoaEventDispatcher *cocoaEventDispatcher = qobject_cast<QCocoaEventDispatcher *>(QGuiApplication::instance()->eventDispatcher());
         QCocoaEventDispatcherPrivate *cocoaEventDispatcherPrivate = 0;
         if (cocoaEventDispatcher)
@@ -1021,6 +1025,7 @@ bool QCocoaWindow::windowShouldBehaveAsPanel() const
     return (type & Qt::Popup) == Qt::Popup || (type & Qt::Dialog) == Qt::Dialog;
 }
 
+#ifndef QT_NO_OPENGL
 void QCocoaWindow::setCurrentContext(QCocoaGLContext *context)
 {
     m_glContext = context;
@@ -1030,6 +1035,7 @@ QCocoaGLContext *QCocoaWindow::currentContext() const
 {
     return m_glContext;
 }
+#endif
 
 void QCocoaWindow::recreateWindow(const QPlatformWindow *parentWindow)
 {
