src/plugins/platforms/cocoa/qnsview.mm
@@ -86,8 +86,10 @@ static QTouchDevice *touchDevice = 0;
         m_buttons = Qt::NoButton;
         m_sendKeyEvent = false;
         m_subscribesForGlobalFrameNotifications = false;
+#ifndef QT_NO_OPENGL
         m_glContext = 0;
         m_shouldSetGLContextinDrawRect = false;
+#endif
         currentCustomDragTypes = 0;
         m_sendUpAsRightButton = false;
         m_inputSource = 0;
@@ -152,6 +154,7 @@ static QTouchDevice *touchDevice = 0;
     return self;
 }
 
+#ifndef QT_NO_OPENGL
 - (void) setQCocoaGLContext:(QCocoaGLContext *)context
 {
     m_glContext = context;
@@ -173,6 +176,7 @@ static QTouchDevice *touchDevice = 0;
             object:self];
     }
 }
+#endif
 
 - (void) globalFrameChanged:(NSNotification*)notification
 {
@@ -418,10 +422,12 @@ static QTouchDevice *touchDevice = 0;
 
 - (void) drawRect:(NSRect)dirtyRect
 {
+#ifndef QT_NO_OPENGL
     if (m_glContext && m_shouldSetGLContextinDrawRect) {
         [m_glContext->nsOpenGLContext() setView:self];
         m_shouldSetGLContextinDrawRect = false;
     }
+#endif
 
     if (m_platformWindow->m_drawContentBorderGradient)
         NSDrawWindowBackground(dirtyRect);
